@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2021/11/15 22:01:22 wiz Exp $
-lib/gstreamer-1.0/libgstmms.so
